--- a/index.html
+++ b/index.html
@@ -5,57 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
   </head>
 
   <body>
+    <!-- header -->
     <header>
       <section>
-        <a href="#"><span>Web</span>Studio</a>
+        <a class="logo-header webstudio" href="./index.html"><span class="logo-web">Web</span>Studio</a>
         <nav>
-          <ul>
-            <li><a href="#">Agencja</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Kontakt</a></li>
+          <ul class="no-dots">
+            <li><a class="nav text-header" href="./index.html">Agencja</a></li>
+            <li><a class="nav text-header" href="./portfolio.html">Portfolio</a></li>
+            <li><a class="nav text-header" href="#">Kontakt</a></li>
           </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:48111111111">+48 111 111 111</a>
-      </section>
+        <a class="header-contact text-header" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="header-contact text-header" href="tel:48111111111">+48 111 111 111</a>
     </header>
 
     <main>
       <!-- HERO -->
-      <section>
-        <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-        <button type="button">Zamów usługę</button>
+      <section class="hero">
+        <h1 class="h1">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+        <button class="button main-btn" type="button">Zamów usługę</button>
       </section>
 
       <section>
-        <ul>
+        <ul class="no-dots">
           <li>
-            <p>LOREM IPSUM</p>
-            <p>
+            <p class="upper-p">LOREM IPSUM</p>
+            <p class="p-content">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
-            <p>LOREM IPSUM</p>
-            <p>
+            <p class="upper-p">LOREM IPSUM</p>
+            <p class="p-content">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
-            <p>LOREM IPSUM</p>
-            <p>
+            <p class="upper-p">LOREM IPSUM</p>
+            <p class="p-content">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
-            <p>LOREM IPSUM</p>
-            <p>
+            <p class="upper-p">LOREM IPSUM</p>
+            <p class="p-content">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
@@ -65,8 +69,8 @@
 
       <!-- Czym się zajmujemy -->
       <section>
-        <h2>Czym się zajmujemy</h2>
-        <ul>
+        <h2 class="h2">Czym się zajmujemy</h2>
+        <ul class="no-dots">
           <li>
             <img
               src="./images/czym_sie_zajmujemy/czym_sie_zajmujemy_img1.jpg"
@@ -95,11 +99,11 @@
       </section>
 
       <!-- Nasz Zespół -->
-      <section>
-        <h2>Nasz zespół</h2>
-        <ul>
+      <section class="our-team">
+        <h2 class="h2">Nasz zespół</h2>
+        <ul class="no-dots">
           <li>
-            <figure>
+            <figure class="photos">
               <img
                 src="./images/nasz_zespol/team_photo_img1.jpg"
                 alt="zdjecie John Doe 1"
@@ -107,13 +111,13 @@
                 height="260"
               />
               <figcaption>
-                <h3>John Doe</h3>
-                <p>Product Designer</p>
+                <h3 class="name">John Doe</h3>
+                <p class="profession text-prof">Product Designer</p>
               </figcaption>
             </figure>
           </li>
           <li>
-            <figure>
+            <figure class="photos">
               <img
                 src="./images/nasz_zespol/team_photo_img2.jpg"
                 alt="zdjecie John Doe 2"
@@ -121,13 +125,13 @@
                 height="260"
               />
               <figcaption>
-                <h3>John Doe</h3>
-                <p>Frontend Developer</p>
+                <h3 class="name">John Doe</h3>
+                <p class="profession text-prof">Frontend Developer</p>
               </figcaption>
             </figure>
           </li>
           <li>
-            <figure>
+            <figure class="photos">
               <img
                 src="./images/nasz_zespol/team_photo_img3.jpg"
                 alt="zdjecie John Doe 3"
@@ -135,13 +139,13 @@
                 height="260"
               />
               <figcaption>
-                <h3>John Doe</h3>
-                <p>Marketing</p>
+                <h3 class="name">John Doe</h3>
+                <p class="profession text-prof">Marketing</p>
               </figcaption>
             </figure>
           </li>
           <li>
-            <figure>
+            <figure class="photos">
               <img
                 src="./images/nasz_zespol/team_photo_img4.jpg"
                 alt="zdjecie John Doe 4"
@@ -149,8 +153,8 @@
                 height="260"
               />
               <figcaption>
-                <h3>John Doe</h3>
-                <p>UI Designer</p>
+                <h3 class="name">John Doe</h3>
+                <p class="profession text-prof">UI Designer</p>
               </figcaption>
             </figure>
           </li>
@@ -159,18 +163,18 @@
     </main>
 
     <!-- footer contact address-->
-    <footer>
+    <footer class="footer">
       <section>
-        <a href="#"><span>Web</span>Studio</a>
-        <address>
-          <ul>
+        <a class="logo-footer webstudio" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+        <address class="address">
+          <ul class="no-dots">
             <li>
-              <a href="https://goo.gl/maps/mpKG6j3hN46Q4T8C9" target="_blank"
+              <a class="footer-contact text-footer" href="https://goo.gl/maps/mpKG6j3hN46Q4T8C9" target="_blank"
                 >m. Warszawa, Aleje Jerozolimskie 21</a
               >
             </li>
-            <li><a href="mailto:info@example.com">info@example.com</a></li>
-            <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+            <li><a class="footer-contact address-contact text-footer" href="mailto:info@example.com">info@example.com</a></li>
+            <li><a class="footer-contact address-contact text-footer" href="tel:+48111111111">+48 111 111 111</a></li>
           </ul>
         </address>
       </section>
