repaired validator errors

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </nav>
         <a class="header-contact text-header" href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a class="header-contact text-header" href="tel:48111111111">+48 111 111 111</a>
+      </section>
     </header>
 
     <main>
