repaired next validator error

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,7 @@
 <body>
     <!-- header -->
     <header>
+        <section>
         <a class="logo-header webstudio" href="./index.html"><span class="logo-web">Web</span>Studio</a>
         <nav>
           <ul class="no-dots">
